theres some hoes in this house (make updateDeckStatus later)

--- a/nksrfl.cabal
+++ b/nksrfl.cabal
@@ -29,6 +29,7 @@ executable nksrfl
       these,
       containers,
       async,
-      async-extra
+      async-extra,
+      bifunctors
     hs-source-dirs:   app
     default-language: Haskell2010
